refactor(#190): REST 응답 MessageListResponse 래핑